Improve test coverage and tidy